bin_PROGRAMS = dukedom
dukedom_SOURCES = main.c \
                  game/include/game.h \
                  io/include/io.h \
                  random/include/random.h \
                  peasants/include/peasants.h \
                  grain/include/grain.h \
                  land/include/land.h \
                  war/include/war.h
dukedom_CFLAGS = -Igame/include \
                 -Iio/include \
                 -Irandom/include \
                 -Ipeasants/include \
                 -Igrain/include \
                 -Iland/include \
                 -Iwar/include
CONFIG_CLEAN_FILES = Makefile.in
